syntax = "proto3";

package mitoblockchaindev.mitoblockchaindev;

option go_package = "mitoblockchaindev/x/mitoblockchaindev/types";

message DiscountToken {
  string creator = 1;
  uint64 id = 2;
  string timestamp = 3;
  string activityName = 4;
  string score = 5;
  string message = 6;
  string discountValue = 7;
  string eligibleCompanies = 8;
  string itemType = 9;
  string expiryDate = 10;
  int64 createdAt = 11;
}